<resources>
    <string name="app_name">Aula1</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="mainFragment">MainFragment</string>
    <string name="next_page">Next Page</string>
    <string name="hello_world">Hello World</string>
    <string name="live_data">Live Data</string>
    <string name="state_flow">State Flow</string>
    <string name="flow">Flow</string>
    <string name="shared_flow">Shared Flow</string>
    <string name="understood">Entendi</string>
    <string name="android_name">Android</string>
    <string name="android_description">Card Description </string>
    <string name="notify_channel_name">Default</string>
    <string name="notify_channel_description">Channel default of notifications</string>
    <string name="notify_title">Created notification</string>
    <string name="notify_text">This is a notification</string>
    <string name="notification_action">Notification Action</string>
</resources>