<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.aula1.ui.main.MainFragment"
        android:label="@string/mainFragment"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_SecondFragment"
            app:destination="@id/secondFragment" />
    </fragment>

    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.aula1.ui.main.SecondFragment"
        android:label="@string/second_fragment"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_MainFragment"
            app:destination="@id/mainFragment">
        </action>

        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/thirdFragment">
        </action>

    </fragment>

    <fragment
        android:id="@+id/thirdFragment"
        android:name="com.example.aula1.ui.main.ThirdFragment"
        android:label="@string/third_fragment">

        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/secondFragment">
        </action>

    </fragment>

</navigation>